Fix DepositIT